[project]

name = "mithwire" # Required

version = "0.51.1"  # Required

description = "Dual-mode anti-detect browser framework — CDP-native stealth for local machines, binary-level patching for production servers. No WebDriver, no chromedriver."
readme = {file = "README.md", content-type = "text/markdown"} # Optional
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = [
    "webdriver", "browser", "captcha", "scraping",
    "selenium", "navigator", "python3", "cloudflare",
    "chromedriver", "anti-bot", "bot-detection",
    "cloudflare-bypass", "distil", "anti-detection"]
# mithwire is a fork of nodriver by UltrafunkAmsterdam (https://github.com/UltrafunkAmsterdam/nodriver).
# Original work Copyright UltrafunkAmsterdam, licensed under AGPL-3.0. See NOTICE and LICENSE.txt.
authors = [
  {name = "Elendil Technologies"}
]

maintainers = [
  {name = "Elendil Technologies"}
]
classifiers = [  # Optional

    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

]

dependencies = [
      "mss",
      "websockets>=14",
      "deprecated"
]

[project.scripts]
mithwire = "mithwire.__main__:main"

#
[project.urls]
"Homepage" = "https://github.com/codeisalifestyle/mithwire"
"Bug Reports" = "https://github.com/codeisalifestyle/mithwire/issues"
"Source" = "https://github.com/codeisalifestyle/mithwire"
"Upstream" = "https://github.com/UltrafunkAmsterdam/nodriver"


[tool.setuptools]
include-package-data = true

# Discover every mithwire subpackage automatically. An earlier explicit list
# (["mithwire", "mithwire.core", "mithwire.cdp"]) silently dropped the new
# ``mithwire.stealth`` package from the 0.50.4 wheel, which broke ``import
# mithwire`` for installers. Globbing keeps any future subpackage shipping.
[tool.setuptools.packages.find]
include = ["mithwire*"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
fingerprints = ["browserforge"]
stealth = ["cloakbrowser"]
dev = [
    "black",
    "build",
    "isort",
    "sphinx",
    "sphinx_markdown_builder",
    "sphinx_autodoc_typehints",
    "furo",
    "pygments",
    "sphinxcontrib-video"
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
